--- a/index.html
+++ b/index.html
@@ -48,15 +48,22 @@
 				</div>
 				<div class="menu-items">
 					<div class="container">
-						<nav>
-							<ul class="menu">
+                        <button class="mob">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                        <div class="collapse">
+						  <nav>
+							 <ul class="menu">
 								<li><a href="#">About Us</a></li>
 								<li><a href="#">Residential Pest</a></li>
 								<li><a href="#">Commercial Pest</a></li>
 								<li><a href="#">Area We Serve</a></li>
 								<li><a href="#">Contact Us</a></li>
-							</ul>
-						</nav>
+							 </ul>
+						  </nav>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -424,13 +431,13 @@
 							<i class="fas fa-globe"></i>
 							<p>Kings, Tulare & Kern Counties</p>
 						</div>
-						<div class="first">
+						<div class="first end-img">
 							<a href="#"><img class="footer-social" src="images/icon_1.png" alt="icon"></a>
 							<a href="#"><img class="footer-social" src="images/icon_2.png" alt="icon"></a>
 							<a href="#"><img class="footer-social" src="images/icon_3.png" alt="icon"></a>
 							<a href="#"><img class="footer-social" src="images/icon_4.png" alt="icon"></a>
 						</div>
-						<div class="first">
+						<div class="first end-img">
 							<img src="images/bbb-logo.png" alt="icon">
 						</div>
 					</div>
